templates/hdm_template.yaml
---
# Source: hdm/charts/elasticsearch/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hdm-deployement-elasticsearch-master
  labels:
    heritage: "Helm"
    release: "release-name"
    chart: "elasticsearch"
    app: "hdm-deployement-elasticsearch-master"
  annotations:
    {}
spec:
  type: ClusterIP
  selector:
    release: "release-name"
    chart: "elasticsearch"
    app: "hdm-deployement-elasticsearch-master"
  ports:
  - name: http
    protocol: TCP
    port: 9200
  - name: transport
    protocol: TCP
    port: 9300
---
# Source: hdm/charts/elasticsearch/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hdm-deployement-elasticsearch-master-headless
  labels:
    heritage: "Helm"
    release: "release-name"
    chart: "elasticsearch"
    app: "hdm-deployement-elasticsearch-master"
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  clusterIP: None # This is needed for statefulset hostnames like elasticsearch-0 to resolve
  # Create endpoints also if the related pod isn't ready
  publishNotReadyAddresses: true
  selector:
    app: "hdm-deployement-elasticsearch-master"
  ports:
  - name: http
    port: 9200
  - name: transport
    port: 9300
---
# Source: hdm/charts/kibana/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kibana
  labels: 
    app: kibana
    release: "release-name"
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 5601
      protocol: TCP
      name: http
      targetPort: 5601
  selector:
    app: kibana
    release: "release-name"
---
# Source: hdm/charts/mysql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mysql-headless
  namespace: default
  labels:
    app.kubernetes.io/name: mysql
    helm.sh/chart: mysql-8.9.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
  selector: 
    app.kubernetes.io/name: mysql
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: primary
---
# Source: hdm/charts/mysql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mysql
  namespace: default
  labels:
    app.kubernetes.io/name: mysql
    helm.sh/chart: mysql-8.9.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
      nodePort: null
  selector: 
    app.kubernetes.io/name: mysql
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: primary
---
# Source: hdm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "release-name-hdm"
spec:
  type: ClusterIP
  ports:
    - name: 80tcp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: "release-name-hdm"
    release: release-name
---
# Source: hdm/charts/kibana/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kibana
  labels: 
    app: kibana
    release: "release-name"
    heritage: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kibana
      release: "release-name"
  template:
    metadata:
      labels:
        app: kibana
        release: "release-name"
      annotations:
        
    spec:
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 1000
      volumes:
      containers:
      - name: kibana
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
        image: "docker.elastic.co/kibana/kibana:7.16.1"
        imagePullPolicy: "IfNotPresent"
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 3
          timeoutSeconds: 5
          exec:
            command:
              - sh
              - -c
              - |
                [...]
        ports:
        - containerPort: 5601
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 1000m
            memory: 2Gi
        volumeMounts:
---
# Source: hdm/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "release-name-hdm"
  labels:
    app: "release-name-hdm"
    chart: "hdm-2.4.5"
    heritage: Helm
    release: release-name
    app.kubernetes.io/name: hdm
    helm.sh/chart: hdm-2.4.5
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.3.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: "release-name-hdm"
      release: release-name
  template:
    metadata:
      labels:
        app: "release-name-hdm"
        release: release-name
      annotations:
        rollme: "DFIu7"
    spec:
      containers:
      - name: hdm
        image: "ghcr.io/curie-data-factory/hdm:2.3.0"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: "80tcp"
          protocol: TCP
        volumeMounts:
        - mountPath: /var/www/html/conf/appli/
          name: hdm-conf-appli
        - mountPath: /var/www/html/conf/db/
          name: hdm-conf-db
        - mountPath: /var/www/html/conf/ldap/
          name: hdm-conf-ldap
        - mountPath: /var/www/html/conf/mail/
          name: hdm-conf-mail
        - mountPath: /var/www/html/version/
          name: hdm-version
      volumes:
      - name: hdm-conf-appli
        secret:
          defaultMode: 0777
          items:
          - key: conf-appli.json
            path: ./conf-appli.json
          secretName: hdm-conf-appli
      - name: hdm-conf-db
        secret:
          defaultMode: 0777
          items:
          - key: conf-db.json
            path: ./conf-db.json
          - key: create_tables.sql
            path: ./create_tables.sql
          optional: false
          secretName: hdm-conf-db
      - name: hdm-conf-ldap
        secret:
          defaultMode: 0777
          items:
          - key: conf-ldap.json
            path: ./conf-ldap.json
          secretName: hdm-conf-ldap
      - name: hdm-conf-mail
        secret:
          defaultMode: 0777
          items:
          - key: msmtprc
            path: ./msmtprc
          secretName: hdm-conf-mail
      - name: hdm-version
        configMap:
          defaultMode: 0777
          items:
          - key: version.json
            path: ./version.json
          name: "release-name-version"
---
# Source: hdm/charts/elasticsearch/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hdm-deployement-elasticsearch-master
  labels:
    heritage: "Helm"
    release: "release-name"
    chart: "elasticsearch"
    app: "hdm-deployement-elasticsearch-master"
  annotations:
    esMajorVersion: "7"
spec:
  serviceName: hdm-deployement-elasticsearch-master-headless
  selector:
    matchLabels:
      app: "hdm-deployement-elasticsearch-master"
  replicas: 3
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      name: "hdm-deployement-elasticsearch-master"
      labels:
        release: "release-name"
        chart: "elasticsearch"
        app: "hdm-deployement-elasticsearch-master"
      annotations:
        
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      automountServiceAccountToken: true
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - "hdm-deployement-elasticsearch-master"
            topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 120
      volumes:
      enableServiceLinks: true
      containers:
      - name: "elasticsearch"
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
        image: "docker.elastic.co/elasticsearch/elasticsearch:7.16.1"
        imagePullPolicy: "IfNotPresent"
        readinessProbe:
          exec:
            command:
              - bash
              - -c
              - |
                [...]
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 3
          timeoutSeconds: 5
        ports:
        - name: http
          containerPort: 9200
        - name: transport
          containerPort: 9300
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 1000m
            memory: 2Gi
        volumeMounts:
---
# Source: hdm/charts/mysql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-mysql
  namespace: default
  labels:
    app.kubernetes.io/name: mysql
    helm.sh/chart: mysql-8.9.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  selector:
    matchLabels: 
      app.kubernetes.io/name: mysql
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: primary
  serviceName: release-name-mysql
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configuration: f904bd3f9b345d6e79db9bd09efa6885955ad6b6f5276d1e1ffc5c85dd76b1d8
      labels:
        app.kubernetes.io/name: mysql
        helm.sh/chart: mysql-8.9.1
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: primary
    spec:
      
      serviceAccountName: release-name-mysql
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: mysql
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/component: primary
                namespaces:
                  - "default"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      containers:
        - name: mysql
          image: docker.io/bitnami/mysql:8.0.28-debian-10-r73
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          ports:
            - name: mysql
              containerPort: 3306
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          startupProbe:
            failureThreshold: 10
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          resources: 
            limits: {}
            requests: {}
          volumeMounts:
            - name: data
              mountPath: /bitnami/mysql
            - name: config
              mountPath: /opt/bitnami/mysql/conf/my.cnf
              subPath: my.cnf
      volumes:
        - name: config
          configMap:
            name: release-name-mysql
  volumeClaimTemplates:
    - metadata:
        name: data
        labels: 
          app.kubernetes.io/name: mysql
          app.kubernetes.io/instance: release-name
          app.kubernetes.io/component: primary
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "20Gi"
---
# Source: hdm/charts/elasticsearch/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hdm-deployement-elasticsearch-master
  labels:
    app: elasticsearch
    release: release-name
    heritage: Helm
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
      - hdm-elastic.company.com
      secretName: hdm-elastic
  rules:
  - host: hdm-elastic.company.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: hdm-deployement-elasticsearch-master
            port:
              number: 9200
---
# Source: hdm/charts/kibana/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-kibana
  labels: 
    app: kibana
    release: "release-name"
    heritage: Helm
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
      - hdm-kibana.company.com
      secretName: hdm-kibana
  rules:
  - host: hdm-kibana.company.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: release-name-kibana
            port: 
              number: 5601
---
# Source: hdm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hdm
  labels:
    app: hdm
    chart: "hdm-2.4.5"
    heritage: Helm
    release: release-name
spec:
  tls:
    - hosts:
      - hdm.company.com
      secretName: hdm
  rules:
  - host: "hdm.company.com"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: release-name-hdm
              port:
                name: 80tcp
---
# Source: hdm/charts/elasticsearch/templates/test/test-elasticsearch-health.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-krofi-test"
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": hook-succeeded
spec:
  securityContext:
    fsGroup: 1000
    runAsUser: 1000
  containers:
  - name: "release-name-mvpgq-test"
    image: "docker.elastic.co/elasticsearch/elasticsearch:7.16.1"
    imagePullPolicy: "IfNotPresent"
    command:
      - "sh"
      - "-c"
      - |
        #!/usr/bin/env bash -e
        curl -XGET --fail 'hdm-deployement-elasticsearch-master:9200/_cluster/health?wait_for_status=green&timeout=1s'
  restartPolicy: Never
